--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-cale=1.0"/>
-    <title>
-        Document
-    </title> 
 </head>
 <body>
- <h1>lojkfkjhfshskf.</h1><p>ejkhksjhfkhskfk</p>
+ <h1>Ефетивне рішення для вашого бізнесу</h1>
+ <ul>
+     <li>
+         <h3>Увага до деталей</h3>
+         <p>Ідейні міркування, а також початок повсякденної роботи з формування позиції.</p>
+     </li>
+     <li>
+         <h3></h3>
+         <p></p>
+     </li>
+     <li>
+         <h3></h3>
+         <p></p>
+     </li>
+     <li>
+         <h3></h3>
+         <p></p>
+     </li>
+ </ul>
+
 
 </body>
 
