--- a/index.html
+++ b/index.html
@@ -1,37 +1,92 @@
-<<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-cale=1.0"/>
-</head>
-<body>
- <h1>Ефетивне рішення для вашого бізнесу</h1>
- <ul>
-     <li>
-         <h3>Увага до деталей</h3>
-         <p>Ідейні міркування, а також початок повсякденної роботи з формування позиції.</p>
-     </li>
-     <li>
-         <h3></h3>
-         <p></p>
-     </li>
-     <li>
-         <h3></h3>
-         <p></p>
-     </li>
-     <li>
-         <h3></h3>
-         <p></p>
-     </li>
- </ul>
+<!DOCTYPE html>
+<html lang="uk">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-cale=1.0" />
+    <title lang="en">Webstydio</title>
+  </head>
 
-
-</body>
-
-
-
-
-
-
-
+  <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="" lang="en"><span>Web</span>Studio</a></li>
+                <li><a href="">Студія</a></li>
+                <li><a href="">Портфоліо</a></li>
+                <li><a href="">Контакти</a></li>           
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </header>
+    <main>
+      <section>
+        <h1>Ефетивне рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
+      <ul>
+        <li>
+          <h3>Увага до деталей</h3>
+          <p>
+            Ідейні міркування, а також початок повсякденної роботи з формування
+            позиції.
+          </p>
+        </li>
+        <li>
+          <h3>Пунктуальність</h3>
+          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне за собою.</p>
+        </li>
+        <li>
+          <h3>Планування</h3>
+          <p>Так само консультація з широким активом значно обумовлює</p>
+        </li>
+        <li>
+          <h3>Сучасні технології</h3>
+          <p>Значимість цих проблем є настільки очевидною, що реалізація планових завдань.</p>
+        </li>
+      </ul>
+      </section>
+      <section>
+          <H2>Чим ми займаємося</H2>
+          <ul>
+              <li><img src="" alt="">box_img1</img></li>
+              <li><img src="" alt="">box_img1</img></li>
+              <li><img src="" alt="">box_img1</img></li>
+          </ul>
+      </section>
+      <section>
+          <h2>Наша команда</h2>
+          <ul>
+              <li>
+                  <img src="" alt="">kom_img1</img><p><b>Ігорь Демьяненко</b></p>
+                  <p lang="en">Product Designer</p>
+              </li>
+              <li>
+                  <img src="" alt="">kom_img1</img><p><b>Ольга Репіна</b></p>
+                  <p lang="en">Frontend Developer</p>
+              </li>
+              <li>
+                  <img src="" alt="">kom_img1</img><p><b>Микола Тарасов</b></p>
+                  <p lang="en">Marketing</p>
+              </li>
+              <li>
+                  <img src="" alt="">kom_img1</img><p><b>Михайло Єрмаков</b></p>
+                  <p lang="en">UI Designer</p>
+              </li>
+          </ul>
+          
+      </section>
+    </main>
+    <footer>
+        <address>
+         <ul>
+             <li><a href="" lang="en"><span>Web</span>Studio</a></li>
+             <li><a href="https://goo.gl/maps/4TEG29RhxD43sS5S9">м. Київ, пр-т Лесі Українки, 26</a></li>
+             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+         </ul>   
+        </address>
+    </footer>
+  </body>
 </html>
