--- a/index.html
+++ b/index.html
@@ -8,85 +8,124 @@
 
   <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="" lang="en"><span>Web</span>Studio</a></li>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>           
-            </ul>
-        </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <nav>
+        <ul>
+          <li>
+            <a href="/index.html" lang="en"><span>Web</span>Studio</a>
+          </li>
+          <li><a href="/">Студія</a></li>
+          <li><a href="/">Портфоліо</a></li>
+          <li><a href="/">Контакти</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
       <section>
-        <h1>Ефетивне рішення для вашого бізнесу</h1>
+        <h1>
+          Ефетивне рішення
+          <pre> для вашого бізнесу</pre>
+        </h1>
         <button type="button">Замовити послугу</button>
       </section>
       <section>
-      <ul>
-        <li>
-          <h3>Увага до деталей</h3>
-          <p>
-            Ідейні міркування, а також початок повсякденної роботи з формування
-            позиції.
-          </p>
-        </li>
-        <li>
-          <h3>Пунктуальність</h3>
-          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне за собою.</p>
-        </li>
-        <li>
-          <h3>Планування</h3>
-          <p>Так само консультація з широким активом значно обумовлює</p>
-        </li>
-        <li>
-          <h3>Сучасні технології</h3>
-          <p>Значимість цих проблем є настільки очевидною, що реалізація планових завдань.</p>
-        </li>
-      </ul>
+        <ul>
+          <li>
+            <h2></h2>
+            <h3>Увага до деталей</h3>
+            <p>
+              Ідейні міркування, а також початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальність</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              за собою.
+            </p>
+          </li>
+          <li>
+            <h3>Планування</h3>
+            <p>Так само консультація з широким активом значно обумовлює</p>
+          </li>
+          <li>
+            <h3>Сучасні технології</h3>
+            <p>
+              Значимість цих проблем є настільки очевидною, що реалізація
+              планових завдань.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
-          <H2>Чим ми займаємося</H2>
-          <ul>
-              <li><img src="" alt="">box_img1</img></li>
-              <li><img src="" alt="">box_img1</img></li>
-              <li><img src="" alt="">box_img1</img></li>
-          </ul>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img src="./images/box_1.jpg" alt="Пишуть команда" width="370" />
+          </li>
+          <li>
+            <img src="./images/box_2.jpg" alt="Оформлють дизайн" width="370" />
+          </li>
+          <li>
+            <img src="./images/box_3.jpg" alt="Підбирають колір" width="370" />
+          </li>
+        </ul>
       </section>
       <section>
-          <h2>Наша команда</h2>
-          <ul>
-              <li>
-                  <img src="" alt="">kom_img1</img><p><b>Ігорь Демьяненко</b></p>
-                  <p lang="en">Product Designer</p>
-              </li>
-              <li>
-                  <img src="" alt="">kom_img1</img><p><b>Ольга Репіна</b></p>
-                  <p lang="en">Frontend Developer</p>
-              </li>
-              <li>
-                  <img src="" alt="">kom_img1</img><p><b>Микола Тарасов</b></p>
-                  <p lang="en">Marketing</p>
-              </li>
-              <li>
-                  <img src="" alt="">kom_img1</img><p><b>Михайло Єрмаков</b></p>
-                  <p lang="en">UI Designer</p>
-              </li>
-          </ul>
-          
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/team_img_1.jpg"
+              alt="Чоловік в окулярах"
+              width="270"
+            />
+            <p><b>Ігорь Демьяненко</b></p>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team_img_2.jpg"
+              alt="Жінка в окулярах"
+              width="270"
+            />
+            <p><b>Ольга Репіна</b></p>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/team_img_3.jpg" alt="Чоловік" width="270" />
+            <p><b>Микола Тарасов</b></p>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/team_img_4.jpg"
+              alt="Чоловік в окулярах"
+              width="270"
+            />
+            <p><b>Михайло Єрмаков</b></p>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
-        <address>
-         <ul>
-             <li><a href="" lang="en"><span>Web</span>Studio</a></li>
-             <li><a href="https://goo.gl/maps/4TEG29RhxD43sS5S9">м. Київ, пр-т Лесі Українки, 26</a></li>
-             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-         </ul>   
-        </address>
+      <address>
+        <ul>
+          <li>
+            <a href="index.html" lang="en"><span>Web</span>Studio</a>
+          </li>
+          <li>
+            <a href="https://goo.gl/maps/4TEG29RhxD43sS5S9"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
