--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <main>
       <section>
         <h1>
-          Ефетивне рішення
-          <pre> для вашого бізнесу</pre>
+          <p>Ефетивне рішення</p>
+          <p>для вашого бізнесу</p>
         </h1>
         <button type="button">Замовити послугу</button>
       </section>
