--- a/index.html
+++ b/index.html
@@ -23,16 +23,13 @@
     </header>
     <main>
       <section>
-        <h1>
-          <p>Ефетивне рішення</p>
-          <p>для вашого бізнесу</p>
-        </h1>
+        <h1>Ефетивне рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <section>
         <ul>
           <li>
-            <h2></h2>
+            <h2>""</h2>
             <h3>Увага до деталей</h3>
             <p>
               Ідейні міркування, а також початок повсякденної роботи з
