--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </ul>
       </section>
       <section>
-        <h2>Чим ми займаємося</h2>
+        <h2>Чим ми займаємось</h2>
         <ul>
           <li>
             <img src="./images/box_1.jpg" alt="Пишуть команда" width="370" />
