--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h2>Чим ми займаємось</h2>
         <ul>
           <li>
-            <img src="./images/box_1.jpg" alt="Пишуть команда" width="370" />
+            <img src="./images/box_1.jpg" alt="Пишуть код" width="370" />
           </li>
           <li>
             <img src="./images/box_2.jpg" alt="Оформлють дизайн" width="370" />
