--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-cale=1.0" />
     <title lang="en">Webstydio</title>
   </head>
-
   <body>
     <header>
       <nav>
@@ -18,14 +17,18 @@
           <li><a href="/">Контакти</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
+      <!--Title-->
       <section>
         <h1>Ефетивне рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
+      <!--Tasks-->
       <section>
         <ul>
           <li>
@@ -56,6 +59,7 @@
           </li>
         </ul>
       </section>
+      <!--Portfolio-->
       <section>
         <h2>Чим ми займаємось</h2>
         <ul>
@@ -70,6 +74,7 @@
           </li>
         </ul>
       </section>
+      <!--Team-->
       <section>
         <h2>Наша команда</h2>
         <ul>
