--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
   </head>
   <body>
     <header>
+      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
       <nav>
         <ul>
-          <li>
-            <a href="/index.html" lang="en"><span>Web</span>Studio</a>
-          </li>
           <li><a href="/">Студія</a></li>
           <li><a href="/">Портфоліо</a></li>
           <li><a href="/">Контакти</a></li>
