--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <a href="./index.html" lang="en"><span>Web</span>Studio</a>
       <nav>
         <ul>
-          <li><a href="/">Студія</a></li>
-          <li><a href="/">Портфоліо</a></li>
-          <li><a href="/">Контакти</a></li>
+          <li><a href="./Studio.html">Студія</a></li>
+          <li><a href="./Portfolio.html">Портфоліо</a></li>
+          <li><a href="./Contacts.html">Контакти</a></li>
         </ul>
       </nav>
       <ul>
