--- a/index.html
+++ b/index.html
@@ -112,11 +112,9 @@
       </section>
     </main>
     <footer>
+      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
       <address>
         <ul>
-          <li>
-            <a href="index.html" lang="en"><span>Web</span>Studio</a>
-          </li>
           <li>
             <a href="https://goo.gl/maps/4TEG29RhxD43sS5S9"
               >м. Київ, пр-т Лесі Українки, 26</a
