--- a/index.html
+++ b/index.html
@@ -62,13 +62,28 @@
         <h2>Чим ми займаємось</h2>
         <ul>
           <li>
-            <img src="./images/box_1.jpg" alt="Пишуть код" width="370" />
+            <img
+              src="./images/box_1.jpg"
+              alt="Пишуть код"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="./images/box_2.jpg" alt="Оформлють дизайн" width="370" />
+            <img
+              src="./images/box_2.jpg"
+              alt="Оформлють дизайн"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="./images/box_3.jpg" alt="Підбирають колір" width="370" />
+            <img
+              src="./images/box_3.jpg"
+              alt="Підбирають колір"
+              width="370"
+              height="294"
+            />
           </li>
         </ul>
       </section>
@@ -81,6 +96,7 @@
               src="./images/team_img_1.jpg"
               alt="Чоловік в окулярах"
               width="270"
+              height="260"
             />
             <p><b>Ігорь Демьяненко</b></p>
             <p lang="en">Product Designer</p>
@@ -90,12 +106,18 @@
               src="./images/team_img_2.jpg"
               alt="Жінка в окулярах"
               width="270"
+              height="260"
             />
             <p><b>Ольга Репіна</b></p>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/team_img_3.jpg" alt="Чоловік" width="270" />
+            <img
+              src="./images/team_img_3.jpg"
+              alt="Чоловік"
+              width="270"
+              height="260"
+            />
             <p><b>Микола Тарасов</b></p>
             <p lang="en">Marketing</p>
           </li>
@@ -104,6 +126,7 @@
               src="./images/team_img_4.jpg"
               alt="Чоловік в окулярах"
               width="270"
+              height="260"
             />
             <p><b>Михайло Єрмаков</b></p>
             <p lang="en">UI Designer</p>
