--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
+      <a href="./index.html" lang="en">Web<span>Studio</span></a>
       <nav>
         <ul>
           <li><a href="./Studio.html">Студія</a></li>
@@ -98,7 +98,7 @@
               width="270"
               height="260"
             />
-            <p><b>Ігорь Демьяненко</b></p>
+            <h3>Ігорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
@@ -108,7 +108,7 @@
               width="270"
               height="260"
             />
-            <p><b>Ольга Репіна</b></p>
+            <h3>Ольга Репіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
@@ -118,7 +118,7 @@
               width="270"
               height="260"
             />
-            <p><b>Микола Тарасов</b></p>
+            <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
@@ -128,14 +128,14 @@
               width="270"
               height="260"
             />
-            <p><b>Михайло Єрмаков</b></p>
+            <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="./index.html" lang="en"><span>Web</span>Studio</a>
+      <a href="./index.html" lang="en">Web<span>Studio</span></a>
       <address>
         <ul>
           <li>
