--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
       <!--Title-->
       <section>
-        <h1>Ефетивне рішення для вашого бізнесу</h1>
+        <h1>Ефективне рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <!--Tasks-->
